<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="20px"
    android:text="@string/add_contacts"
    />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10px"
    >
	    <TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/name"
	    />
	    <EditText
	     android:id="@+id/name"
	     android:layout_width="fill_parent" 
	     android:layout_height="wrap_content" 
	    />
 </LinearLayout>
	    
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10px"
    >
	     <TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/phone"
	    />
	    <EditText
		     android:id="@+id/phone"
		     android:layout_width="fill_parent" 
		     android:layout_height="wrap_content" 
	    />
    </LinearLayout>
    
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10px"
   	 >
	     <TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/email"
	    />
	    <EditText
	         android:id="@+id/email"
		     android:layout_width="fill_parent" 
		   	 android:layout_height="wrap_content" 
	    />
    </LinearLayout>
    
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10px"
	    >
	     <TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/address"
	    />
	    <EditText
	     android:id="@+id/address"
	     android:layout_width="fill_parent" 
	   	 android:layout_height="wrap_content" 
	    />
	    </LinearLayout>
	    
	     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="20px"
		   
	    >
	      <Button
	       android:id="@+id/add"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/menu_add"
	       />
	      <Button
	       android:id="@+id/reset"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/chongzhi"
	       />  
    </LinearLayout>
</LinearLayout>
